--- a/draw.ipynb
+++ b/draw.ipynb
@@ -1,34 +1,103 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'networkx'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-1-6cfa0e8b80ea>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0mget_ipython\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mrun_line_magic\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'matplotlib'\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m'inline'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 2\u001B[0;31m \u001B[0;32mimport\u001B[0m \u001B[0mnetworkx\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0mnx\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      3\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mmatplotlib\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpyplot\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0mplt\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0;32mfrom\u001B[0m \u001B[0mgraph\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mgraph\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'networkx'"
-     ]
-    }
-   ],
    "source": [
-    "%matplotlib inline\n",
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt\n",
+    "## An easy (but fun) derivation\n",
     "\n",
-    "from graph import graph\n",
+    "Let us consider the arbitrary direction\n",
+    "$$\n",
+    "\\hat{n} = \\sin\\theta\\cos\\phi \\,\\hat{x} + \\sin\\theta\\sin\\phi \\,\\hat{y} + \\cos\\theta \\,\\hat{z}.\n",
+    "$$\n",
+    "Its operator matrix $S_n$ is\n",
+    "$$\n",
+    "S_n = \\frac{\\hbar}{2}\n",
+    "\\begin{pmatrix}\n",
+    "\\cos\\theta & \\sin\\theta\\,\\mathrm{e}^{-i\\phi} \\\\\n",
+    "\\sin\\theta\\,\\mathrm{e}^{i\\phi} & -\\cos\\theta\n",
+    "\\end{pmatrix}.\n",
+    "$$\n",
     "\n",
-    "G = graph()\n",
-    "nx.draw(G)\n",
-    "plt.show()"
+    "The characteristic equation of this matrix is\n",
+    "\\begin{equation*}\n",
+    "    \\begin{vmatrix}\n",
+    "    \\frac{\\hbar}{2}\\cos\\theta-\\lambda & \\frac{\\hbar}{2}\\sin\\theta\\,\\mathrm{e}^{-i\\phi} \\\\\n",
+    "    \\frac{\\hbar}{2}\\sin\\theta\\,\\mathrm{e}^{i\\phi} & -\\frac{\\hbar}{2}\\cos\\theta-\\lambda\n",
+    "    \\end{vmatrix}\n",
+    "    = 0.\n",
+    "\\end{equation*}\n",
+    "\n",
+    "The eigenvalues of this equation are\n",
+    "$$\n",
+    "\\lambda = \\pm \\frac{\\hbar}{2},\n",
+    "$$\n",
+    "\n",
+    "and the eigenspinors are obtained in the usual way:\n",
+    "\\begin{equation*}\n",
+    "    \\frac{\\hbar}{2}\n",
+    "    \\begin{pmatrix}\n",
+    "    \\cos\\theta & \\sin\\theta\\,\\mathrm{e}^{-i\\phi} \\\\\n",
+    "    \\sin\\theta\\,\\mathrm{e}^{i\\phi} & -\\cos\\theta\n",
+    "    \\end{pmatrix}\n",
+    "    \\begin{pmatrix}\n",
+    "    \\alpha \\\\\n",
+    "    \\beta\n",
+    "    \\end{pmatrix}\n",
+    "    = \\pm \\frac{\\hbar}{2}\n",
+    "    \\begin{pmatrix}\n",
+    "    \\alpha \\\\\n",
+    "    \\beta\n",
+    "    \\end{pmatrix}.\n",
+    "\\end{equation*}\n",
+    "\n",
+    "Therefore, we have the relation\n",
+    "$$\n",
+    "\\frac{\\hbar}{2} \\left(\\alpha \\cos\\theta + \\beta \\sin\\theta\\,\\mathrm{e}^{-i\\phi}\\right) = \\pm \\frac{\\hbar}{2} \\alpha.\n",
+    "$$\n",
+    "\n",
+    "Taking the positive and negative signs yields respectively\n",
+    "\\begin{eqnarray*}\n",
+    "    \\beta = \\alpha \\frac{1 - \\cos\\theta}{\\sin\\theta} \\mathrm{e}^{i\\phi} = \\alpha \\tan\\left(\\frac{\\theta}{2}\\right)\\mathrm{e}^{i\\phi}\n",
+    "    & \\quad\\text{and}\\quad\\, &\n",
+    "    \\beta = -\\alpha \\frac{1 + \\cos\\theta}{\\sin\\theta} \\mathrm{e}^{i\\phi} = -\\alpha \\cot\\left(\\frac{\\theta}{2}\\right)\\mathrm{e}^{i\\phi}.\n",
+    "\\end{eqnarray*}\n",
+    "\n",
+    "The, the normalized eigenspinors are respectively\n",
+    "\\begin{eqnarray*}\n",
+    "    \\chi_+^{(n)} = \n",
+    "    \\begin{pmatrix}\n",
+    "    \\cos(\\theta/2) \\\\\n",
+    "    \\mathrm{e}^{i\\phi} \\sin(\\theta/2)\n",
+    "    \\end{pmatrix}\n",
+    "    & \\quad\\text{and}\\quad\\, &\n",
+    "    \\chi_-^{(n)} = \n",
+    "    \\begin{pmatrix}\n",
+    "    \\sin(\\theta/2) \\\\\n",
+    "    -\\mathrm{e}^{i\\phi} \\cos(\\theta/2)\n",
+    "    \\end{pmatrix}.\n",
+    "\\end{eqnarray*}\n",
+    "\n",
+    "These eigenspinors span the space. In other words, they form a complete base and any spinor\n",
+    "$$\n",
+    "|\\chi\\rangle = \n",
+    "    \\begin{pmatrix}\n",
+    "    a \\\\\n",
+    "    b\n",
+    "    \\end{pmatrix}\n",
+    "$$\n",
+    "can be expressed as a linear combination of them. It is straightforward to show that the probabilities of obtaining $+\\hbar/2$ and $-\\hbar/2$ when measuring $S_n$ are respectively\n",
+    "\\begin{eqnarray*}\n",
+    "    P_+ = \n",
+    "    |a\\cos(\\theta/2) + b\\sin(\\theta/2)\\,\\mathrm{e}^{-i\\phi}|^2\n",
+    "    & \\quad\\text{and}\\quad\\, &\n",
+    "    P_- = \n",
+    "    |a\\sin(\\theta/2) - b\\cos(\\theta/2)\\,\\mathrm{e}^{-i\\phi}|^2\n",
+    "\\end{eqnarray*}\n",
+    "\n",
+    "The maths have been derived, and we are now ready to tackle the Stern-Gerlach system. Let's say we have an input state $|\\chi\\rangle$. If the electron goes through an analyzer $\\hat{n}$-oriented, the probability of obtaining $+\\hbar/2$ is $P_+$ and the probability of obtaining $-\\hbar/2$ is $P_-$. In the first case, the spinor collapses to $\\chi_+^{(n)}$; and in the second case, the spinor collapses to $\\chi_-^{(n)}$ after the measurement. Knowing the new state, we send the electron in another analyzer, and so on. We keep track of the probabilities in each path. This experience clearly shows the statistical interpretation of quantum mechanics. After all, the Stern-Gerlach system can be seen as a probability tree."
    ]
   }
  ],
@@ -41,16 +110,16 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
